packages/molecule/src/grammar/grammar.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/

"use strict";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { grammar: peg$parsegrammar };
  var peg$startRuleFunction = peg$parsegrammar;

  var peg$c0 = "table";
  var peg$c1 = "{";
  var peg$c2 = "}";
  var peg$c3 = "vector";
  var peg$c4 = "<";
  var peg$c5 = ">";
  var peg$c6 = "struct";
  var peg$c7 = ":";
  var peg$c8 = "array";
  var peg$c9 = "[";
  var peg$c10 = ";";
  var peg$c11 = "]";
  var peg$c12 = "union";
  var peg$c13 = "option";
  var peg$c14 = "(";
  var peg$c15 = ")";
  var peg$c16 = "syntax";
  var peg$c17 = "=";
  var peg$c18 = ",";
  var peg$c19 = "import";
  var peg$c20 = "/";
  var peg$c21 = "../";
  var peg$c22 = "/*";
  var peg$c23 = "*/";
  var peg$c24 = "//";
  var peg$c25 = "#";
  var peg$c26 = "\n";
  var peg$c27 = "\r\n";
  var peg$c28 = "0";

  var peg$r0 = /^[0-9A-Z_a-z]/;
  var peg$r1 = /^[A-Za-z]/;
  var peg$r2 = /^[A-Z]/;
  var peg$r3 = /^[a-z]/;
  var peg$r4 = /^[^*\/]/;
  var peg$r5 = /^[^\n]/;
  var peg$r6 = /^[^\r\n]/;
  var peg$r7 = /^[\t ]/;
  var peg$r8 = /^[0-9]/;
  var peg$r9 = /^[1-9]/;

  var peg$e0 = peg$literalExpectation("table", false);
  var peg$e1 = peg$literalExpectation("{", false);
  var peg$e2 = peg$literalExpectation("}", false);
  var peg$e3 = peg$literalExpectation("vector", false);
  var peg$e4 = peg$literalExpectation("<", false);
  var peg$e5 = peg$literalExpectation(">", false);
  var peg$e6 = peg$literalExpectation("struct", false);
  var peg$e7 = peg$literalExpectation(":", false);
  var peg$e8 = peg$literalExpectation("array", false);
  var peg$e9 = peg$literalExpectation("[", false);
  var peg$e10 = peg$literalExpectation(";", false);
  var peg$e11 = peg$literalExpectation("]", false);
  var peg$e12 = peg$literalExpectation("union", false);
  var peg$e13 = peg$literalExpectation("option", false);
  var peg$e14 = peg$literalExpectation("(", false);
  var peg$e15 = peg$literalExpectation(")", false);
  var peg$e16 = peg$literalExpectation("syntax", false);
  var peg$e17 = peg$literalExpectation("=", false);
  var peg$e18 = peg$literalExpectation(",", false);
  var peg$e19 = peg$literalExpectation("import", false);
  var peg$e20 = peg$literalExpectation("/", false);
  var peg$e21 = peg$literalExpectation("../", false);
  var peg$e22 = peg$classExpectation([["0", "9"], ["A", "Z"], "_", ["a", "z"]], false, false);
  var peg$e23 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false);
  var peg$e24 = peg$classExpectation([["A", "Z"]], false, false);
  var peg$e25 = peg$classExpectation([["a", "z"]], false, false);
  var peg$e26 = peg$literalExpectation("/*", false);
  var peg$e27 = peg$classExpectation(["*", "/"], true, false);
  var peg$e28 = peg$literalExpectation("*/", false);
  var peg$e29 = peg$literalExpectation("//", false);
  var peg$e30 = peg$literalExpectation("#", false);
  var peg$e31 = peg$classExpectation(["\n"], true, false);
  var peg$e32 = peg$classExpectation(["\r", "\n"], true, false);
  var peg$e33 = peg$classExpectation(["\t", " "], false, false);
  var peg$e34 = peg$literalExpectation("\n", false);
  var peg$e35 = peg$literalExpectation("\r\n", false);
  var peg$e36 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e37 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e38 = peg$literalExpectation("0", false);

  var peg$f0 = function(version, imports, declares) {
      return {
        syntaxVersion: version,
        imports,
        declares,
      };
    };
  var peg$f1 = function(declare) { return declare; };
  var peg$f2 = function(name, fields) {
      return {
        type: "table",
        name,
        fields,
      };
    };
  var peg$f3 = function(name, item) {
      return {
        type: "vector",
        name,
        item,
      };
    };
  var peg$f4 = function(name, fields) {
      return {
        type: "struct",
        name,
        fields,
      };
    };
  var peg$f5 = function(name, type) {
      return { name, type };
    };
  var peg$f6 = function(name, item, item_count) {
      return {
        type: "array",
        name,
        item,
        item_count,
      };
    };
  var peg$f7 = function(name, declares) {
      return {
        type: "union",
        name,
        items: declares,
      };
    };
  var peg$f8 = function(name) { return name; };
  var peg$f9 = function(name, id) {
      return [name, id];
    };
  var peg$f10 = function(head, tail) { return head + tail.join(""); };
  var peg$f11 = function(name, item) {
      return {
        type: "option",
        name,
        item,
      };
    };
  var peg$f12 = function(version) {
      return version.join("");
    };
  var peg$f13 = function(path) { return path; };
  var peg$f14 = function(head, middle, tail) {
      return head.join("") + middle.flatMap((x) => x).join("") + tail;
    };
  var peg$f15 = function(head, tail) { return head + tail.join(""); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsegrammar() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsebrk();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsebrk();
    }
    s2 = peg$parsesyntax_version_stmt();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = [];
    s4 = peg$parsebrk();
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$parsebrk();
    }
    s4 = [];
    s5 = peg$parseimport_stmt();
    while (s5 !== peg$FAILED) {
      s4.push(s5);
      s5 = peg$parseimport_stmt();
    }
    s5 = [];
    s6 = peg$parsebrk();
    while (s6 !== peg$FAILED) {
      s5.push(s6);
      s6 = peg$parsebrk();
    }
    s6 = [];
    s7 = peg$parsedecl_stmt();
    if (s7 !== peg$FAILED) {
      while (s7 !== peg$FAILED) {
        s6.push(s7);
        s7 = peg$parsedecl_stmt();
      }
    } else {
      s6 = peg$FAILED;
    }
    if (s6 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s2, s4, s6);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedecl_stmt() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsebrk();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsebrk();
    }
    s2 = peg$parseoption_decl();
    if (s2 === peg$FAILED) {
      s2 = peg$parseunion_decl();
      if (s2 === peg$FAILED) {
        s2 = peg$parsearray_decl();
        if (s2 === peg$FAILED) {
          s2 = peg$parsestruct_decl();
          if (s2 === peg$FAILED) {
            s2 = peg$parsevector_decl();
            if (s2 === peg$FAILED) {
              s2 = peg$parsetable_decl();
            }
          }
        }
      }
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parsebrk();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parsebrk();
      }
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetable_decl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsebrk();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsebrk();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseidentifier();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsebrk();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsebrk();
          }
          if (input.charCodeAt(peg$currPos) === 123) {
            s5 = peg$c1;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parsebrk();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parsebrk();
            }
            s7 = [];
            s8 = peg$parsefield_decl();
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = peg$parsefield_decl();
            }
            if (input.charCodeAt(peg$currPos) === 125) {
              s8 = peg$c2;
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s8 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f2(s3, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsevector_decl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsebrk();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsebrk();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseidentifier();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsebrk();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsebrk();
          }
          if (input.charCodeAt(peg$currPos) === 60) {
            s5 = peg$c4;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parsebrk();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parsebrk();
            }
            s7 = peg$parseidentifier();
            if (s7 !== peg$FAILED) {
              s8 = [];
              s9 = peg$parsebrk();
              while (s9 !== peg$FAILED) {
                s8.push(s9);
                s9 = peg$parsebrk();
              }
              if (input.charCodeAt(peg$currPos) === 62) {
                s9 = peg$c5;
                peg$currPos++;
              } else {
                s9 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e5); }
              }
              if (s9 !== peg$FAILED) {
                s10 = [];
                s11 = peg$parsebrk();
                while (s11 !== peg$FAILED) {
                  s10.push(s11);
                  s11 = peg$parsebrk();
                }
                s11 = peg$parsestmt_end();
                if (s11 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s0 = peg$f3(s3, s7);
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestruct_decl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsebrk();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsebrk();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseidentifier();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsebrk();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsebrk();
          }
          if (input.charCodeAt(peg$currPos) === 123) {
            s5 = peg$c1;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parsebrk();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parsebrk();
            }
            s7 = [];
            s8 = peg$parsefield_decl();
            while (s8 !== peg$FAILED) {
              s7.push(s8);
              s8 = peg$parsefield_decl();
            }
            if (input.charCodeAt(peg$currPos) === 125) {
              s8 = peg$c2;
              peg$currPos++;
            } else {
              s8 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s8 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f4(s3, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefield_decl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parseidentifier();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsebrk();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsebrk();
      }
      if (input.charCodeAt(peg$currPos) === 58) {
        s3 = peg$c7;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = peg$parsebrk();
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = peg$parsebrk();
        }
        s5 = peg$parseidentifier();
        if (s5 !== peg$FAILED) {
          s6 = [];
          s7 = peg$parsebrk();
          while (s7 !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parsebrk();
          }
          s7 = peg$parsefield_end();
          if (s7 !== peg$FAILED) {
            s8 = [];
            s9 = peg$parsebrk();
            while (s9 !== peg$FAILED) {
              s8.push(s9);
              s9 = peg$parsebrk();
            }
            peg$savedPos = s0;
            s0 = peg$f5(s1, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsearray_decl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c8) {
      s1 = peg$c8;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsebrk();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsebrk();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseidentifier();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsebrk();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parsebrk();
          }
          if (input.charCodeAt(peg$currPos) === 91) {
            s5 = peg$c9;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e9); }
          }
          if (s5 !== peg$FAILED) {
            s6 = [];
            s7 = peg$parsebrk();
            while (s7 !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parsebrk();
            }
            s7 = peg$parseidentifier();
            if (s7 !== peg$FAILED) {
              s8 = [];
              s9 = peg$parsebrk();
              while (s9 !== peg$FAILED) {
                s8.push(s9);
                s9 = peg$parsebrk();
              }
              if (input.charCodeAt(peg$currPos) === 59) {
                s9 = peg$c10;
                peg$currPos++;
              } else {
                s9 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e10); }
              }
              if (s9 !== peg$FAILED) {
                s10 = [];
                s11 = peg$parsebrk();
                while (s11 !== peg$FAILED) {
                  s10.push(s11);
                  s11 = peg$parsebrk();
                }
                s11 = peg$parsenumber_gt_zero();
                if (s11 !== peg$FAILED) {
                  s12 = [];
                  s13 = peg$parsebrk();
                  while (s13 !== peg$FAILED) {
                    s12.push(s13);
                    s13 = peg$parsebrk();
                  }
                  if (input.charCodeAt(peg$currPos) === 93) {
                    s13 = peg$c11;
                    peg$currPos++;
                  } else {
                    s13 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e11); }
                  }
                  if (s13 !== peg$FAILED) {
                    s14 = [];
                    s15 = peg$parsebrk();
                    while (s15 !== peg$FAILED) {
                      s14.push(s15);
                      s15 = peg$parsebrk();
                    }
                    s15 = peg$parsestmt_end();
                    if (s15 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s0 = peg$f6(s3, s7, s11);
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseunion_decl() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
